--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
     <section class="page-header">
         <h1 class="project-name">ContextMenuManager</h1>
-        <h2 class="project-tagline">Windows右键菜单管理程序</h2>
+        <h2 class="project-tagline">一个纯粹的Windows右键菜单管理程序</h2>
 
         <a href="https://github.com/BluePointLilac/ContextMenuManager" class="btn">GitHub主页</a>
         <a href="https://github.com/BluePointLilac/ContextMenuManager/releases/download/2.2.0.0/ContextMenuManager.zip" class="btn">下载最新版</a>
@@ -34,16 +34,13 @@
     </section>
 
     <section class="main-content">
-        <h1 id="contextmenumanager">ContextMenuManager</h1>
-        <hr />
-        <blockquote>
-            <p>一个纯粹的Windows右键菜单管理程序</p>
-        </blockquote>
-
         <p>
-            <img src="https://img.shields.io/github/languages/top/BluePointLilac/ContextMenuManager.svg?color=blue" alt="" />
-            <img src="https://img.shields.io/github/release/BluePointLilac/ContextMenuManager.svg" alt="" />
-            <img src="https://img.shields.io/github/issues/BluePointLilac/ContextMenuManager.svg" alt="" />
+            <img src="https://img.shields.io/github/stars/BluePointLilac/ContextMenuManager.svg"/>
+            <img src="https://img.shields.io/github/forks/BluePointLilac/ContextMenuManager.svg"/>
+            <img src="https://img.shields.io/github/issues/BluePointLilac/ContextMenuManager.svg"/>
+            <img src="https://img.shields.io/github/license/BluePointLilac/ContextMenuManager.svg"/>
+            <img src="https://img.shields.io/github/languages/top/BluePointLilac/ContextMenuManager.svg"/>
+            <img src="https://img.shields.io/github/release/BluePointLilac/ContextMenuManager.svg"/>
         </p>
 
         <h2 id="主要功能">主要功能</h2>
