--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="description" content="Windows右键菜单管理程序" />
     <meta property="og:description" content="Windows右键菜单管理程序" />
     <link rel="canonical" href="https://bluepointlilac.github.io/ContextMenuManager/" />
+    <link rel="shortcut icon" href="https://gitee.com/BluePointLilac/ContextMenuManager/raw/master/ContextMenuManager/Properties/AppIcon.ico" type="image/x-icon" />
     <meta property="og:url" content="https://bluepointlilac.github.io/ContextMenuManager/" />
     <meta property="og:site_name" content="ContextMenuManager" />
     <script type="application/ld+json">
