--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <meta property="og:locale" content="en_US" />
     <meta name="description" content="Windows右键菜单管理程序" />
     <meta property="og:description" content="Windows右键菜单管理程序" />
-    <link rel="canonical" href="https://bluepointlilac.github.io/ContextMenuManager/" />
-    <link rel="shortcut icon" href="https://gitee.com/BluePointLilac/ContextMenuManager/raw/master/ContextMenuManager/Properties/AppIcon.ico" type="image/x-icon" />
-    <meta property="og:url" content="https://bluepointlilac.github.io/ContextMenuManager/" />
+    <link rel="canonical" href="https://bluepointlilac.github.io/ContextMenuManager" />
+    <link rel="shortcut icon" href="https://raw.githubusercontent.com/BluePointLilac/ContextMenuManager/master/ContextMenuManager/Properties/AppIcon.ico" type="image/x-icon" />
+    <meta property="og:url" content="https://bluepointlilac.github.io/ContextMenuManager" />
     <meta property="og:site_name" content="ContextMenuManager" />
     <script type="application/ld+json">
-        {"@type":"WebSite","headline":"ContextMenuManager","url":"https://bluepointlilac.github.io/ContextMenuManager/","description":"Windows右键菜单管理程序","name":"ContextMenuManager","@context":"https://schema.org"}
+        {"@type":"WebSite","headline":"ContextMenuManager","url":"https://bluepointlilac.github.io/ContextMenuManager","description":"Windows右键菜单管理程序","name":"ContextMenuManager","@context":"https://schema.org"}
     </script>
     <!-- End Jekyll SEO tag -->
 
@@ -29,7 +29,8 @@
         <h2 class="project-tagline">一个纯粹的Windows右键菜单管理程序</h2>
 
         <a href="https://github.com/BluePointLilac/ContextMenuManager" class="btn">GitHub主页</a>
-        <a href="https://github.com/BluePointLilac/ContextMenuManager/releases/download/3.2.0.0/ContextMenuManager.zip" class="btn">下载最新版</a>
+        <a href="https://gitee.com/BluePointLilac/ContextMenuManager" class="btn">Gitee主页</a>
+        <a href="https://github.com/BluePointLilac/ContextMenuManager/releases/latest" class="btn">下载最新版</a>
 
 
     </section>
@@ -60,36 +61,36 @@
         </ul>
 
         <h2 id="运行截图">运行截图</h2>
-        <p><img src="https://gitee.com/BluePointLilac/ContextMenuManager/raw/master/Screenshot.png" alt="" /></p>
+        <p><img src="https://gitee.com/BluePointLilac/ContextMenuManager/raw/master/Screenshot.png"/></p>
 
         <h2 id="程序图标">程序图标</h2>
         <ul>
-            <li>程序主图标来自 <a href="https://www.easyicon.net/1208132-mouse_icon.html">Easyicon</a><br /><img src="https://gitee.com/BluePointLilac/ContextMenuManager/raw/master/ContextMenuManager/Properties/AppIcon.ico" alt="" /></li>
-            <li><a href="https://github.com/BluePointLilac/ContextMenuManager/tree/master/ContextMenuManager/Properties/Resources/Images">程序按钮图标</a> 主要来自于 <a href="https://www.iconfont.cn/">阿里巴巴矢量图标资源库</a></li>
+            <li>程序主图标来自 <a href="https://www.easyicon.net/1208132-mouse_icon.html">EasyIcon</a><br/><img src="https://raw.githubusercontent.com/BluePointLilac/ContextMenuManager/master/ContextMenuManager/Properties/AppIcon.ico"/></li>
+            <li><a href="https://github.com/BluePointLilac/ContextMenuManager/tree/master/ContextMenuManager/Properties/Resources/Images">程序按钮图标</a> 主要来自于 <a href="https://www.iconfont.cn/">阿里巴巴矢量图标资源库</a><br/><img src="https://raw.githubusercontent.com/BluePointLilac/ContextMenuManager/master/AppImage.png"/></li>
         </ul>
 
         <h2 id="下载更新">下载更新</h2>
         <ul>
             <li>程序有检查更新功能，除了更新程序本身还会更新程序字典，下载完成后直接覆盖原文件即可</li>
-            <li>由于Github Raw被墙，Gitee Raw有月访问次数上限，故将程序设置为每月自动检测一次更新，<br />大家也可以自行浏览 <a href="https://github.com/BluePointLilac/ContextMenuManager/releases">Github Releases</a> 或者 <a href="https://gitee.com/BluePointLilac/ContextMenuManager/releases">Gitee 发行版</a> 检查程序是否有更新。</li>
+            <li>由于Github Raw被墙，Gitee Raw有月访问次数上限，故将程序设置为每月自动检测一次更新，<br/>大家也可以自行浏览 <a href="https://github.com/BluePointLilac/ContextMenuManager/releases">Github Releases</a> 或者 <a href="https://gitee.com/BluePointLilac/ContextMenuManager/releases">Gitee 发行版</a> 检查程序是否有更新。</li>
         </ul>
 
         <h2 id="温馨提示">温馨提示</h2>
         <ul>
-            <li>一些特殊菜单项目(ShellEx类型，比如文件的加密(&amp;Y))可能会受到其他因素影响，导致不会显示<br />在右键菜单中，但是按照程序使用的通用规则在此程序中仍会显示为启用，这是正常现象。</li>
-            <li>每个右键菜单管理程序禁用菜单方法可能不同，建议不要同时使用多个右键菜单管理程序，大部分<br />同类型程序使用简单暴力的备份-删除法，此程序尽可能使用了系统提供的键值进行隐藏操作；如果<br />之前使用过其他程序禁用右键菜单项目，建议先使用对应软件还原，不然可能无法在此程序中显示。</li>
-            <li>此程序不用于清理未卸载干净的程序，但是可以帮助你快速定位菜单项相关注册表位置和文件位置，<br />你可以根据相关内容进行你的操作。如果你是一个电脑小白，建议只使用启用\禁用功能。</li>
+            <li>一些特殊菜单项目(ShellEx类型，比如文件的加密(&amp;Y))可能会受到其他因素影响，导致不会显示<br/>在右键菜单中，但是按照程序使用的通用规则在此程序中仍会显示为启用，这是正常现象。</li>
+            <li>每个右键菜单管理程序禁用菜单方法可能不同，建议不要同时使用多个右键菜单管理程序，大部分<br/>同类型程序使用简单暴力的备份-删除法，此程序尽可能使用了系统提供的键值进行隐藏操作；如果<br />之前使用过其他程序禁用右键菜单项目，建议先使用对应软件还原，不然可能无法在此程序中显示。</li>
+            <li>此程序不用于清理未卸载干净的程序，但是可以帮助你快速定位菜单项相关注册表位置和文件位置，<br/>你可以根据相关内容进行你的操作。如果你是一个电脑小白，建议只使用启用\禁用功能。</li>
         </ul>
 
         <h2 id="联系作者">联系作者</h2>
         <ul>
-            <li>程序由我个人独立开发，当然也要感谢 <a href="http://www.pcmoe.net/">萌研社</a> 站长 @坑晨 平时的答疑解惑。能力有限，难免出现<br />一些Bug，欢迎大家积极反馈Bug和提出优化建议。</li>
+            <li>程序由我个人独立开发，当然也要感谢 <a href="http://www.pcmoe.net">萌研社</a> 站长 @坑晨 平时的答疑解惑。能力有限，难免出现<br/>一些Bug，欢迎大家积极反馈Bug和提出优化建议。</li>
             <li>个人B站：<a href="https://space.bilibili.com/34492771">蓝点lilac</a>（欢迎大家关注我！）</li>
             <li>个人邮箱：1617859183@qq.com</li>
         </ul>
 
         <h2 id="捐赠作者">捐赠作者</h2>
-        <p>此程序完全免费，如果你觉得这个程序对你有所帮助，可以通过扫面下方二维码（微信、支付宝、QQ）<br />进行捐赠，金额请随意，谢谢你的理解和支持！更加期待你为此项目点亮Star（这对我很重要！）<br /><img src="https://gitee.com/BluePointLilac/ContextMenuManager/raw/master/ContextMenuManager/Properties/Resources/Images/Donate.png" alt="" /></p>
+        <p>此程序完全免费，如果你觉得这个程序对你有所帮助，可以通过扫面下方二维码（微信、支付宝、QQ）<br/>进行捐赠，金额请随意，谢谢你的理解和支持！更加期待你为此项目点亮Star（这对我很重要！）<br /><img src="https://raw.githubusercontent.com/BluePointLilac/ContextMenuManager/master/ContextMenuManager/Properties/Resources/Images/Donate.png"/></p>
 
     </section>
 </body>
