--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </ul>
 
         <h2 id="运行截图">运行截图</h2>
-        <p><img src="https://gitee.com/BluePointLilac/ContextMenuManager/raw/master/Screenshot.png"/></p>
+        <p><img src="https://raw.githubusercontent.com/BluePointLilac/ContextMenuManager/master/Screenshot.png"/></p>
 
         <h2 id="程序图标">程序图标</h2>
         <ul>
